src/components/styles/components.css
.Tag {
    font-size: 14px;
    background: var(--redKasa);
    border-radius: 10px;
    color: white;
    padding: .2rem 1.5rem;
    width: fit-content;
    height: fit-content;
}

@media screen and (max-width: 768px) {    
    .Tag {
        font-size: 10px;
        border-radius: 5px;
    }
}

.Thumb {
    min-height: 21.25rem;
    background: black;
    position: relative;
    color: white;
    border-radius: 10px;
    overflow: hidden;
}

@media screen and (max-width: 620px) {    
    .Thumb {
        min-height: auto;
    }
    .Tag {
        font-size: 10px;
    }
}

.Thumb__cover {
    width: 100%;
    height: 100%;
    object-fit: cover;
    mask-image: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(0, 0, 0, 0.1) 100%);
    -webkit-mask-image: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(0, 0, 0, 0.1) 100%);
}

.Thumb__title {
    position: absolute;
    bottom: 0;
    width: 100%;
    margin: 1rem 0;
}

.Thumb__title p {
    padding: 0 1rem;
}

.Dropdown {
    width: 100%;
    font-size: 18px;
    font-weight: 500;
}

.Dropdown__title {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: var(--redKasa);
    color: white;
    padding: 0.5rem 1rem;
    border-radius: 5px;
    cursor: pointer;
}

.Dropdown__title p {
    margin: 0;
}
.Dropdown__chevron {
    transition: 200ms;
}

.isOpen {
    transform: rotate(180deg);
}

.Dropdown__list {
    background-color: var(--greyBG);
    color: var(--redKasa);
    padding: 1rem;
    border-radius: 5px;
    font-weight: 400;
    width: 100%;
    display: none;
}

.Dropdown__open {
    display: flex;
    z-index: 2;
}

.Dropdown__list ul {
    display: flex;
    flex-direction: column;
    gap: .5rem;
}

@media screen and (max-width: 519px) {
    .Dropdown {
        font-size: 13px;
    }
}

.Carousel {
    width: 100%;
    height: 415px;
    border-radius: 25px;
    overflow-x: hidden;
    position: relative;
}

.Carousel__pictures {
    height: 100%;
    display: flex;
    transition: 300ms;
}

.Carousel__pictures img {
    min-width: 100%;
    max-width: 100%;
    object-fit: cover;
}

.Carousel__nav {
    position: absolute;
    font-size: 50px;
    color: white;
    top: calc(50% - 20px);
    left: 15px;
    z-index: 1;
    transition: 300ms;
    cursor: pointer;
}
.Carousel__nav:hover {
    transform: scale(1.2);
}

.Carousel__nav__next {
    left: auto;
    right: 15px;
}

.Carousel__pagination {
    position: absolute;
    width: 100%;
    text-align: center;
    color: white;
    font-size: 18px;
    font-weight: 500;
    z-index: 1;
    bottom: 15px;
}

@media screen and (max-width: 768px) {
    .Carousel {
        height: 255px;
    }

    .Carousel__pagination {
        display: none;
    }

    .Carousel__nav {
        font-size: 30px;
        top: calc(50% - 10px);
    }
}

.Header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 1rem;
    padding-bottom: 1rem;
}

.Header__nav {
    display: flex;
    gap: 2rem;
    font-size: 24px;
    color: var(--redKasa);
    font-weight: 500;
}

.Header__nav .isActive {
    text-decoration: underline;
}

footer {
    background: black;
    color: white;
    display: flex;
    flex-direction: column;
    gap: 2rem;
    padding: 3rem 2rem;
    align-items: center;
}

footer img {
    height: 2.5rem;
}

footer p {
    font-size: 24px;
    font-weight: 500;
}

@media screen and (max-width: 519px) {
    .Header img {
        width: 7rem;
    }
    .Header__nav {
        font-size: 12px;
        gap: 10px;
    }

    footer p {
        font-size: 12px;
    }
}

.PictureLayout {
    position: relative;
    width: 100%;
    height: 223px;
    border-radius: 25px;
    overflow: hidden;
}

.PictureLayout img {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.PictureLayout div {
    color: white;
    background-color: rgba(0, 0, 0, 0.3);
    position: absolute;
    z-index: 1;
    top: 0;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 48px;
    font-weight: 500;
   
}

.PictureLayout p {
    white-space:pre-wrap;
}


@media screen and (max-width: 820px) {
    .PictureLayout div {
        font-size: 24px;
    }
}

.UserCard {
    display: flex;
    align-items: center;
    gap: .5rem;
    justify-content: flex-end;
}
.UserCard__name {
     font-weight: 500;
     font-size: 18px;
     text-align: right;
 }
 .UserCard img {
    height: 64px;
    width: 64px;
    border-radius: 50px;
 }

 .Rating {
    color: #E3E3E3;
    display: flex;
    gap: .2rem;
    justify-content: flex-end;
    font-size: 24px;
 }

 .Rating__star {
    color: var(--redKasa);
 }

@media screen and (max-width: 519px) {
    .PictureLayout div {
        padding: 0 1rem;
    }
    .PictureLayoutHome {
        height: 111px;
        border-radius: 10px;
    }

    .UserCard__name {
        font-size: 12px;
     }
     .UserCard img {
        height: 32px;
        width: 32px;
     }

     .Rating {
        font-size: 13px;
     }
 }

